<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="registerText">Register</string>
    <string name="email_text">Email</string>
    <string name="display_name">Display Name</string>
    <string name="register">Register</string>
    <string name="empty_error">Can\'t be empty</string>
    <string name="email_not_formed_error">must be like (abc@example.com)</string>
    <string name="register_success">Register Success</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have account?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="dumpy_newspaper">CNN</string>
    <string name="dumpy_new_description">Why TikTok is taking months to delete personal US user data from servers outside its Project Texas firewalls, even as its political standing sours</string>
    <string name="dumpy_date">Feb 26, 2023, 16.32 PM</string>
    <string name="favorite">Favorite</string>
</resources>